# ipopt-trajectoy-optimization

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  TODO.md
include/: ipopt_adaptor.h  math_utils.h  opt_interface.hpp  systems.h  trajectories.h
src/: .opt_main.cpp.swp  opt_interface.cpp  opt_main.cpp
src/unit_tests/: unit_test_a.cpp  unit_test_b.cpp  unit_test_c.cpp  unit_test_d.cpp
